# masha-freeswitch-modules

./: Dockerfile  README.md  configure.ac.grpc.patch  modules.conf.in.grpc.patch  modules.conf.vanilla.xml.grpc  vars_diff.xml
mod_speechpro_transcribe/: Makefile.am
mod_speechpro_transcribe/speechproapi/: AsrService.grpc.pb.cc  AsrService.grpc.pb.h  AsrService.pb.cc  AsrService.pb.h  base.grpc.pb.cc  base.grpc.pb.h  base.pb.cc  base.pb.h
mod_yandex_transcribe/: Makefile.am
mod_yandex_transcribe/cloudapi/google/api/: http.grpc.pb.h  http.pb.cc  http.pb.h
mod_yandex_transcribe/cloudapi/yandex/cloud/ai/stt/v2/: stt_service.grpc.pb.cc  stt_service.grpc.pb.h  stt_service.pb.cc  stt_service.pb.h
mod_yandex_transcribe/cloudapi/yandex/cloud/api/: operation.grpc.pb.cc  operation.grpc.pb.h  operation.pb.cc  operation.pb.h
mod_yandex_transcribe/cloudapi/yandex/cloud/operation/: operation.grpc.pb.cc  operation.grpc.pb.h  operation.pb.cc  operation.pb.h
